[package]
name = "yata-object"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Object storage abstraction with tiered write-through"

[dependencies]
yata-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
ciborium.workspace = true
tokio = { workspace = true }
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
