[package]
name = "yata-ocel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OCEL 2.0 event log types and Arrow schema"

[dependencies]
yata-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
indexmap.workspace = true

[dev-dependencies]
tokio = { workspace = true }
indexmap.workspace = true
